@@ -25,9 +25,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 - From: Geoffrey Young <gyoung@laserlink.net>
   Subject: FW: bug in mod_perl-1.24 & request->args & request->content
 
-- From: Geoffrey Young <gyoung@laserlink.net>
-  Subject: patch for setting loglevel
-
 - -- post 1.25 --
 
 - From: JR Mayberry <jr.mayberry@e-vend.net>
